# life-os

./: .env.example  .gitignore  Caddyfile  JSON Formatter and Validator.txt  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
aw_sync/: __main__.py  backfill.py  install.sh  install_lite.sh  io.lifeos.awsync.plist  lite.plist  lite.py  sync.py
body_image/: RUNBOOK.md  __init__.py  coach.py  interventions.py  routes.py  schemas.py  service.py  storage.py  validation.py
body_image/calibration/: README.md  __init__.py  anchor_scores.json
body_image/raters/: __init__.py  _common.py  _parse.py  _rubric.py  claude.py  gemini.py  geometry.py  gpt4v.py
body_image/templates/: dashboard.html
calendar_sync/: Dockerfile  __main__.py  sync.py
coach/: Dockerfile  __main__.py  hevy_routines.py  normalizer.py  orchestrator.py  parser.py  recommend.py  reresolve.py  seed_aliases.py
db/: apply.py
db/migrations/: 0001_init.sql  0002_raw_tables.sql  0003_fact_tables.sql  0004_mart_tables.sql  0005_indexes.sql  0006_views.sql  0007_copilot_metadata.sql  0008_transaction_item_id.sql  0009_whoop_journal.sql  0010_mcp_telemetry_and_spend.sql  0011_whoop_labs.sql  0012_events.sql  0013_events_open_sessions.sql  0014_lifelog_activity_types.sql  0014_whoop_journal_iphone_bridge.sql  0015_hevy_schema.sql  0016_hevy_exercise_id_text.sql  0017_hevy_routines.sql  0018_pushpress_schema.sql  0019_coach_layer.sql  0020_pushpress_workout_score.sql  0021_host_heartbeats.sql  0022_body_image.sql  0023_body_image_optimizations.sql  0024_body_image_recommendations.sql  0025_whoop_private_trends.sql  0026_whoop_lift.sql  0027_whoop_lift_set.sql  0028_labs_native_and_external.sql  0029_strength_unified_view.sql  0030_imaging.sql  0031_strength_exercise_norm.sql  0032_fact_biometric_natural_key.sql  0033_mcp_write_audit.sql  0034_calai_nutrition.sql  0035_food_log_natural_key.sql
face_geometry/: Dockerfile  main.py  requirements.txt
ingest_calai/: RUNBOOK.md  __init__.py  __main__.py  client.py  ingest.py  local_db.py  transforms.py
ingest_calendar/: Dockerfile  __main__.py  client.py  ingest.py  oauth.py  transforms.py
ingest_copilot/: Dockerfile  __main__.py  auth.py  graphql.py  ingest.py  transforms.py
ingest_cronometer/: Dockerfile  __main__.py  exporter.py  ingest.py  mobile_client.py  parsers.py
ingest_hevy/: Dockerfile  __main__.py  client.py  ingest.py  transforms.py
ingest_pushpress/: Dockerfile  __main__.py  auth.py  client.py  ingest.py  transforms.py
ingest_whoop/: Dockerfile  __main__.py  client.py  ingest.py  oauth.py  transforms.py  webhooks.py
ingest_whoop_journal/: Dockerfile  RUNBOOK.md  __main__.py  auth.py  bootstrap_from_capture.py  client.py  ingest.py  refresh_webhook.py  transforms.py
ingest_whoop_labs/: __main__.py  biomarkers.py  ingest.py  transforms.py
ingest_whoop_private/: Dockerfile  __main__.py  client.py  ingest.py  labs.py  lift_write.py  transforms.py
lifelog_api/: __init__.py  activity_types.json  activity_types.py  auth.py  routes.py  schemas.py  service.py
lifeos_core/: __init__.py  alerts.py  db.py  events.py  logging.py  oauth_store.py  runs.py  settings.py  tz.py  upsert.py  whoop_cognito.py
lifeos_core/models/: __init__.py
mart_refresh/: Dockerfile  __main__.py  refresh.py  sql.py
mcp_server/: Dockerfile  __main__.py  auth.py  cronometer_write_tools.py  db_write_tools.py  hevy_write_tools.py  labs_write_tools.py  schema_docs.py  server.py  sql_safety.py  telemetry.py  tools.py  whoop_lift_write_tools.py  write_tools.py
scheduler/: Dockerfile  __main__.py
scripts/: backfill_events.py  backfill_whoop_private_from_files.py  backup.sh  seed_pr_baseline.py  test_cronometer_mobile.py
tests/: conftest.py  test_alerts.py  test_apply.py  test_calai_client.py  test_calai_local_db.py  test_calai_transforms.py  test_calendar_derive.py  test_coach_normalizer_pattern.py  test_coach_recommend.py  test_copilot_parse.py  test_cronometer_parse.py  test_db_write_safety.py  test_mart_refresh.py  test_mcp_tools.py  test_pushpress_transforms.py  test_whoop_cognito.py  test_whoop_journal_auth.py  test_whoop_journal_bootstrap.py  test_whoop_journal_parse.py  test_whoop_journal_webhook.py  test_whoop_labs_lift_write.py  test_whoop_private_transforms.py  test_whoop_transform.py  test_whoop_webhooks.py
tests/fixtures/calai/: fixfood_grilled_salmon.json
tests/fixtures/copilot/: transactions.json
tests/fixtures/cronometer/: biometrics.csv  daily_nutrition.csv  servings.csv
tools/: calai_sync.sh  com.lifeos.calai-sync.plist
(+10 files in other folders)
