[project]
name = "life-os"
version = "0.1.0"
description = "Personal life-data warehouse and Claude MCP server"
requires-python = ">=3.12"
readme = "README.md"

# All runtime dependencies for every service live here. Each service's
# Dockerfile installs the same set; image bloat is acceptable for a personal
# build, and a single lock file keeps versions in sync across services.
dependencies = [
    # DB
    "psycopg[binary,pool]>=3.2",
    # HTTP / web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "tenacity>=9.0",
    # Models / settings
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Scheduling
    "apscheduler>=3.10",
    # Logging
    "structlog>=24.4",
    # MCP
    "mcp>=1.0",
    # Stats
    "scipy>=1.14",
    "numpy>=2.1",
    # Google
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.34",
    # Optional observability (no-op if SENTRY_DSN blank)
    "sentry-sdk>=2.14",
    # CLI utility
    "click>=8.1",
    "boto3>=1.35",
    # Optional OTLP tracing (Langfuse / Grafana Cloud free tiers)
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    # Coach: WOD parser + load recommender + Hevy routine writer.
    "anthropic>=0.39",
    # body_image: GPT-4o vision rater + photo normalization before LLM calls.
    "openai>=1.50",
    "pillow>=10.4",
    # Form-data parsing for the body_image upload route (FastAPI's
    # UploadFile is multipart, which python-multipart handles).
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

# This project is a monorepo of services run via `python -m <service>` from the
# repo root. We don't ship a wheel; uv just manages the shared venv.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",                      # line length handled by formatter
    "RUF001", "RUF002", "RUF003",  # intentional unicode in docs/comments (×, σ, →, ≥)
]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Query()/Form()/File()/Depends() in argument defaults is the idiom.
"**/routes.py" = ["B008"]
# Deprecated/peripheral modules — kept for historical data; not worth churning.
"coach/*.py" = ["B007", "B905", "B904"]
"body_image/*.py" = ["B007", "B905", "B904"]
"ingest_copilot/*.py" = ["F841"]
"ingest_cronometer/*.py" = ["B904"]
"ingest_pushpress/*.py" = ["B904", "B007"]
"ingest_whoop/*.py" = ["B904"]
"aw_sync/*.py" = ["B904", "SIM115"]
"scripts/*.py" = ["B007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]
